# dream-studio

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATABASE.md  DREAM-STUDIO-ROADMAP.md  Dockerfile  Dockerfile.runtime-check  INSTALL.md  LICENSE  Makefile  PATTERN-ENHANCEMENT.md  README.md  SECURITY.md  STRUCTURE.md  T006_test_report.md  WORKFLOWS.md  backfill_tokens.py  backlog.md  check_db.py  check_schema.py  compat.py  config.yml  docker-compose.yml  ds.cmd  ds.ps1  install.ps1  install.sh  launch-dashboard  launch-dashboard.cmd  packs.yaml  plugin.json  pyproject.toml  (+5 more)
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  SKILL_STANDARDS.md
.marketplace/: PACKAGING_SUMMARY.md
.planning/: 18-2-1-writer-inventory.md  CONSTITUTION.md  GOTCHAS.md  README.md  ROADMAP.md  analyze-skill-plan.md  analyze-skill.md  enforcement-plan.md  phase-18-architectural-realignment.md  security-target-expansion-plan.md  traceability.yaml  workflow-engine-plan.md  workflow-engine.md
adapter-projections/: README.md  _SUPERSEDED.md
agents/: README.md  chief-of-staff.md  client.md  devops-engineer.md  director.md  kubernetes-expert.md  research-analyst.md
analytics/: README.md
analyze/: __init__.py  audit.py  bugs.py  discovery.py  engine.py  research.py  synthesis.py
config/: event_type_registry.py  event_type_registry_data.py  event_type_registry_entries_ai.py  event_type_registry_entries_business.py  event_type_registry_entries_other.py  event_type_registry_queries.py  event_type_registry_shared.py
control/: __init__.py
core/: __init__.py  analytics_ingestion.py  analytics_ingestion_contract.py  analytics_ingestion_core.py  analytics_ingestion_rows.py  analytics_ingestion_shared.py  career_ops.py  installed_productization.py  installed_productization_acceptance.py  installed_productization_backup.py  installed_productization_legacy_detect.py  installed_productization_legacy_migrate.py  installed_productization_setup.py  installed_productization_shared.py  installed_productization_uninstall.py  installed_runtime.py  module_contracts.py  module_profiles.py  org_intelligence.py  runtime_state.py
docs/: ARCHITECTURE.md  DATABASE.md  DECISION_QUERY_EXAMPLES.md  HOOK_RUNTIME.md  MIGRATION_AUTHORITY.md  PUBLICATION_BOUNDARY.md  README.md  RUNTIME_RELIABILITY_GATE.md  TOOL_CAPABILITIES.md  TRANSACTION_SAFETY_GUIDE.md  UAT-Phase6-Checklist.md  UPGRADE_PLAN.md  WORKFLOWS.md  WORKFLOW_RUNTIME.md  client-profile-schema.md  copilot-setup.md  coverage-report-phase6.md  cursor-setup.md  demo-disaster-prevention-scenario.md  demo-script.md  design-skills-guide.md  operator-guide.md  portfolio-case-study.md  proving-index.md  quickstart.md  security-best-practices.md  security-orchestration-pattern.md  security-skills-redundancy-analysis.md  security-storage-layout.md  token-efficient-prompting.md  token-overhead.md  token-reduction-summary.md  tool-reference.md
evals/: eval_01_event_sequence_skill_dispatch.json  eval_02_behavior_text_quality_response.json  eval_03_mixed_events_and_behavior.json  eval_04_negative_check_no_direct_code.json  eval_05_regression_detection.json  eval_06_promoted_devops_dispatch.json  eval_07_promoted_terraform_dispatch.json  eval_08_promoted_research_dispatch.json  eval_09_resume_after_break.json  eval_10_work_order_close_gate.json
examples/: adapter_usage_example.py
guardrails/: delta_guard.py  enforcement.py  evaluator.py  loader.py  memory_taint.py  models.py  scanner_utils.py
hooks/: hooks.json  on-commit.py  run.cmd  run.py  run.sh
integrations/: detector.py  health.py  manifest.py
meta/: README.md
projections/: ml.py  setup.py
runtime/: session_config.py
schemas/: behavioral_eval.schema.json
scripts/: README.md  adapters_config.yml  analyze_project.py  backfill_components.py  backfill_correlation_ids.py  backfill_dual_canonical.py  backfill_memory_fts.py  backfill_raw_claude_code_events.py  backfill_task_status.py  backfill_token_sessions.py  benchmark_tokens.py  build_adapters.py  check_repo_updates.py  check_schema_version.py  check_scrubbed_identifiers.py  ci_gate.py  common.py  dashboard_smoke_harness.py  debug_trust_score.py  dev.ps1  docker_runtime_check.py  ds_dashboard.py  efficiency_analytics.py  generate-dashboard.py  generate_org_intelligence.py  generate_routing.py  hydrate_registry.py  init_security_state.py  inspect_db_tables.py  lesson_queue.py  lint_skills.py  memory_audit.py  migrate_frontmatter_to_yaml.py  migrate_to_db.py  requeue_failed.py  research_cache.py  resume_from_handoff.py  runtime_state_hash_guard.py  session_analytics.py  setup.py  (+13 more)
(+3153 files in other folders)
