[tool.black]
line-length = 100

[project.scripts]
ds = "interfaces.cli.ds:main"

[tool.flake8]
max-line-length = 100
per-file-ignores = [
    "tests/*:E501,F401",
]

[tool.pytest.ini_options]
testpaths = ["tests", "analytics/tests"]
asyncio_mode = "auto"
addopts = "-v --color=no"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "runtime_reliability: Phase 5 runtime reliability gate — core contracts that must always pass",
]

[tool.coverage.run]
source = ["hooks/lib", "packs/domains/domain_lib"]
omit = [
    "hooks/lib/workflow_state.py",
    "hooks/lib/traceability.py",
    # Wave 0 infrastructure (temporary - add tests in Wave 1)
    "hooks/lib/deprecation.py",
    "hooks/lib/document_store.py",
    "hooks/lib/migrate_files_to_sqlite.py",
    "hooks/lib/research_engine.py",
    "hooks/lib/research_methods.py",
    "hooks/lib/wave_executor.py",
    # Wave 6 learning systems (temporary - add tests in follow-up)
    "hooks/lib/pattern_learning.py",
    "hooks/lib/workflow_learning.py",
    "hooks/lib/token_optimization.py",
    "hooks/lib/repo_analyzer.py",
    # Progressive disclosure & discovery systems (temporary - add tests in follow-up)
    "hooks/lib/skill_router.py",
    "hooks/lib/skill_calibration.py",
    "hooks/lib/component_extractor.py",
    "hooks/lib/findings_summarizer.py",
    "hooks/lib/team_context.py",
]

[tool.coverage.report]
fail_under = 70
