[tool.black]
line-length = 100

[project.scripts]
ds = "interfaces.cli.ds:main"

[tool.flake8]
max-line-length = 100
per-file-ignores = [
    "tests/*:E501,F401",
]

[tool.pytest.ini_options]
testpaths = ["tests", "analytics/tests"]
asyncio_mode = "auto"
addopts = "-v --color=no"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "runtime_reliability: Phase 5 runtime reliability gate — core contracts that must always pass",
]

[tool.coverage.run]
source = [
    "core",
    "runtime",
    "interfaces",
    "spool",
    "projections",
    "emitters",
    "canonical",
    "control",
]
omit = [
    # omit: example/template files, not production logic
    "projections/core/email/example_usage.py",
    # omit: migration scripts, one-time ops — tests added in 18.7.6
    "core/config/migrations/*",
    # omit: harvest target — tests added in 18.4.3 telemetry workstream
    "core/telemetry/emitters.py",
    # omit: harvest target — tests added in 18.4.3 telemetry workstream
    "core/telemetry/token_capture.py",
]

[tool.coverage.report]
fail_under = 5
